--- a/assets/theme.scss
+++ b/assets/theme.scss
@@ -6,7 +6,7 @@
 
 /*-- scss:defaults --*/
 
-$navbar-hl: #ca054d;
+$navbar-hl: #99B030;
 
 
 
@@ -15,26 +15,26 @@ $navbar-hl: #ca054d;
 
 /* unvisited link */
 a:link {
-  color:  #ca054d;
+  color:  #99B030;
   text-decoration: none;
 }
 
 /* visited link */
 a:visited {
-  color:  #ca054d;
+  color:  #99B030;
   text-decoration: none;
 }
 
 /* mouse over link */
 a:hover {
-  color:  #ca054d;
+  color:  #99B030;
   text-decoration: underline;
   
 }
 
 /* selected link */
 a:active {
-  color:  #ca054d;
+  color:  #99B030;
   text-decoration: none;
 } 
 
