--- a/assets/theme.scss
+++ b/assets/theme.scss
@@ -27,14 +27,14 @@ a:visited {
 
 /* mouse over link */
 a:hover {
-  color:  #99B030;
+  color:  #343a40;
   text-decoration: underline;
   
 }
 
 /* selected link */
 a:active {
-  color:  #99B030;
+  color:  #7A82AB;
   text-decoration: none;
 } 
 
