--- a/assets/theme.scss
+++ b/assets/theme.scss
@@ -60,7 +60,7 @@ body {
   background-color: var(--lightestg);
   color: var(--dark);
   max-width: 90%;
- /* margin: 0 auto;*/
+  margin: 0 auto;
  /* font-size: 18px;*/
 }
 
