--- a/assets/theme.scss
+++ b/assets/theme.scss
@@ -36,10 +36,10 @@ a:link {
 }
 
 /* visited link */
-a:visited {
+/*a:visited {
   color:  var(--avo);
   text-decoration: none;
-}
+}*/
 
 /* mouse over link */
 a:hover {
