--- a/assets/theme.scss
+++ b/assets/theme.scss
@@ -55,6 +55,8 @@ a:active {
 } 
 
 /*page background and other options */
+// The main body
+$grid-body-width: 900px !default;
 
 body {
   font-family: "Roboto Mono", monospace;
