--- a/assets/theme.scss
+++ b/assets/theme.scss
@@ -56,7 +56,7 @@ a:active {
 
 /*page background and other options */
 // The main body
-$grid-body-width: 1000px !default;
+$grid-body-width: 100% !default;
 
 body {
   font-family: "Roboto Mono", monospace;
