remove anchor links

--- a/assets/theme.scss
+++ b/assets/theme.scss
@@ -13,6 +13,7 @@
     --purple: #7A82AB;
     --pale_green: #D3E2B1;
     --lightestg: #E6EED2;
+    --davo: #7a8c27;
     --avo: #99B030;
     --lavo: #CBDC7F;
     --pavo: #DEE9AF;
