--- a/assets/theme.scss
+++ b/assets/theme.scss
@@ -50,10 +50,10 @@ a:active {
 } 
 
 /* visited link */
-a:visited {
+/* a:visited {
   color:  var(--purple);
   text-decoration: underline;
-}
+} */
 
 /*page background and other options */
 // The main body
